Got cells to rotate on update, but haven't fixed gap at top!

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,123 @@
 @tailwind components;
 @tailwind utilities;
 
-.cell-animation {
-  animation: revealCharCell linear;
-  animation-duration: 0.15s;
+header {
+  --height: 0px;
+  position: relative;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid var(--border-primary);
+  width: 100%;
+  height: var(--height);
+  position: relative;
 }
 
-@keyframes revealCharCell {
+:root {
+  --animation-speed: 1000ms;
+  --animation-speed-fast: 500ms;
+  --default-cell-bg-color: theme('colors.slate.400');
+}
+
+.dark {
+  --default-cell-bg-color: theme('colors.slate.700');
+}
+
+.cell-fill-animation {
+  animation: onTypeCell linear;
+  animation-duration: 0.35s;
+}
+
+.cell-reveal {
+  animation-duration: 0.35s;
+  animation-timing-function: linear;
+  animation-fill-mode: backwards;
+}
+
+.cell-reveal.absent {
+  animation-name: revealAbsentCharCell;
+}
+
+.cell-reveal.correct {
+  animation-name: revealCorrectCharCell;
+}
+
+.cell-reveal.present {
+  animation-name: revealPresentCharCell;
+}
+
+.cell-reveal > .letter-container {
+  animation: offsetLetterFlip 0.35s linear;
+  animation-fill-mode: backwards;
+}
+
+svg:hover {
+  animation: float infinite;
+  animation-duration: var(--animation-speed);
+}
+
+.sun:hover {
+  animation: rotate linear;
+  animation-duration: var(--animation-speed-fast);
+}
+
+.moon:hover {
+  animation: swivel linear;
+  animation-duration: var(--animation-speed);
+}
+
+@keyframes revealAbsentCharCell {
+  0% {
+    transform: rotateX(0deg);
+    background-color: var(--default-cell-bg-color);
+    border-color: var(--default-cell-bg-color);
+  }
+  100% {
+    transform: rotateX(180deg);
+    background-color: var(--default-cell-bg-color);
+    border-color: var(--default-cell-bg-color);
+  }
+}
+
+@keyframes revealCorrectCharCell {
+  0% {
+    transform: rotateX(0deg);
+    background-color: var(--default-cell-bg-color);
+    border-color: var(--default-cell-bg-color);
+  }
+  100% {
+    transform: rotateX(180deg);
+    background-color: theme('colors.green.400');
+    border-color: theme('colors.green.400');
+  }
+}
+
+@keyframes revealPresentCharCell {
+  0% {
+    transform: rotateX(0deg);
+    background-color: var(--default-cell-bg-color);
+    border-color: var(--default-cell-bg-color);
+  }
+  100% {
+    transform: rotateX(180deg);
+    background-color: theme('colors.yellow.400');
+    border-color: theme('colors.yellow.400');
+  }
+}
+
+/* Additional animation on the child div to avoid letters turning upside down/snapping back to upright visual glitch */
+@keyframes offsetLetterFlip {
+  0% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(180deg);
+  }
+}
+
+@keyframes onTypeCell {
   0% {
     transform: scale(1);
   }
@@ -18,5 +129,42 @@
 
   100% {
     transform: scale(1);
+  }
+}
+
+.shadowed {
+  text-shadow: 1px 1px 1px #000000;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes swivel {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-45deg);
+  }
+  100% {
+    transition: rotate(0);
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, -0.5rem);
+  }
+  100% {
+    transform: translate(0, 0);
   }
 }
